--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
                 <section data-router-view="intro" class="welcomePage"> <!-- class home-->
                     
-                    <nav class="navIcon">
-                        <div class="introLink"><!--home presentation-->
-                            <a class="navLinks" href="home.html"><span class="homeButton">HOME</span></a>
+                    <nav id="navIcon">
+                        <div id="introLink"><!--home presentation-->
+                            <a id="navLinks" href="home.html"><span id="homeButton">HOME</span></a>
                         </div>
                     </nav>
                     
