--- a/home.html
+++ b/home.html
@@ -11,8 +11,16 @@
        
     </head>
     <body class="home">
-        <main data-router-wrapper>
-            <section data-router-view="home" class="home">
+        <header>
+            <div class="theHeader">
+                <h1 class="headerText">FloatyS</h1>
+                    <pre class="subHeaderText">we move weight
+    so you dont have to
+                </pre>
+            </div>
+        </header>
+        <main>
+            <section class="home">
 
 
                     <nav class="wrapper">
