--- a/home.html
+++ b/home.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/styles.css" rel="stylesheet">
@@ -19,15 +23,15 @@
                 </pre>
             </div>
         </header>
-        <main>
+        <mainw>
             <section class="home">
 
 
                     <nav class="wrapper">
                         <div class="container">
-                            <img src="images/istockphoto-1256512913-612x612.jpg" class="menuLogo" width="50px">
+                            <img src="images/istockphoto-1256512913-612x612.jpg" id="menuLogo" width="50px">
                         </div>
-                        <div class="navOpen">
+                        <div id="navigationBox" class="hide">
                             <ul class="menu">
                                 <li><a href="index.html">Intro</a></li>
                                 <li><a href="home.html">Home</a></li>
