added some text and a button

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                 </pre>
             </div>
         </header>
-        <mainw>
+        <main>
             <section class="home">
 
 
@@ -41,13 +41,17 @@
                     
                     </nav>
 
+                    <section class="contentTop">
+                        <div class="homeContent">
+                            <div class="homePresentation">
+                                <h1>Floating has never been easier!</h1>
+                                <h4>Check out our selection.</h4>
+                                <a class="btn">Shop Now</a>
+                            </div>
+                        </div>
+                    </section>
 
-
-                <div class="homeContent">
-                    <div class="homePresentation">
-                        <h1>Typing dopeness to existence</h1>
-                    </div>
-                </div>
+                
 
              </section>
         </main>
