--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/styles.css" rel="stylesheet">
         <link href="css/style.scss" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <title>
             HOME
         </title>
@@ -43,13 +44,21 @@
 
                     <section class="contentTop">
                         <div class="homeContent">
+
                             <div class="homePresentation">
                                 <h1>Floating has never been easier!</h1>
                                 <h4>Check out our selection.</h4>
                                 <a class="btn">Shop Now</a>
                             </div>
+
+                            <div class="submenu">
+                                <a href="#">bud</a>
+                                <a href="#">accessories</a>
+                            </div>
+
                         </div>
                     </section>
+
                     <section class="aboutSection">
                         <header><h2>What we do</h2></header>
                         <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos maxime sequi sint numquam accusamus dolor ab, similique ipsa exercitationem molestiae inventore molestias
