adding a features section, has temporary images with descriptions of our features

--- a/home.html
+++ b/home.html
@@ -59,6 +59,30 @@
                         </div>
                     </section>
 
+
+                    <section class="features">
+                        <div class="featuresContainer">
+
+                            <div class="feature">
+                                <img src="images/car-vehicle-thumbnail.png" class="carImage" alt="car"/>
+                                <p>Let us come to you</p>
+                            </div>
+
+                            <div class="feature">
+                                <img src="images/secret.png" alt="box"/>
+                                <p>We keep it on the low!</p>
+                            </div>
+
+                            <div class="feature">
+                                <img src="images/ping.png" alt="map"/>
+                                <p>Anywhere in Connecticut</p>
+                            </div>
+
+                            
+
+                        </div>
+                    </section>
+
                     <section class="aboutSection">
                         <header><h2>What we do</h2></header>
                         <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos maxime sequi sint numquam accusamus dolor ab, similique ipsa exercitationem molestiae inventore molestias
