minor changes made to positioning. added a section header

--- a/home.html
+++ b/home.html
@@ -69,12 +69,12 @@
                             </div>
 
                             <div class="feature">
-                                <img src="images/secret.png" alt="box"/>
+                                <img src="images/secret.png" class="discreetImage" alt="box"/>
                                 <p>We keep it on the low!</p>
                             </div>
 
                             <div class="feature">
-                                <img src="images/ping.png" alt="map"/>
+                                <img src="images/ping.png" class="mapImage" alt="map"/>
                                 <p>Anywhere in Connecticut</p>
                             </div>
 
@@ -93,6 +93,12 @@
 <!--Below im working on the image slider-->
 <!--Below im working on the image slider-->
 <!--Below im working on the image slider-->
+                    <div class="monthSpecial">
+                        <div class="monthSpecialText">
+                            Strain Of The Month
+                        </div>
+                        
+                    </div>
 
 
                     
