--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                             <ul class="menu">
                                 <li><a href="index.html">Intro</a></li>
                                 <li><a href="home.html">Home</a></li>
-                                <li><a href="#">Other</a></li>
+                                <li><a href="aboutUs.html">About Us</a></li>
                              </ul>
                         </div>
                     
