added more styling to aboutUs page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,7 +27,7 @@
     <!-- Always put CSS files last-->
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="aboutPage">
     <!-- <header>
        blank
         
@@ -48,18 +48,18 @@
     </nav>
 
     <main>
-        <!-- Add main content here -->
-        <h1>Our Story</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae iste excepturi odio pariatur nihil nesciunt facere blanditiis. Deserunt, iusto harum quas accusantium minus et velit cupiditate, mollitia molestiae inventore consequuntur sint necessitatibus distinctio at adipisci, nesciunt consequatur! Tenetur, doloremque iusto asperiores deserunt tempora veniam, unde nemo porro possimus minima enim fugit delectus dolorum. Sed, sunt dolor aliquam minus iste similique deserunt consectetur dicta delectus, nesciunt animi ut repudiandae adipisci omnis a maiores? Vero, ipsa quam. Vero cupiditate ex nam ad.
-        </p>
-        <div class="aboutUsVideo">
-            <video src="videos/RPReplay_Final1670879511 (1).mp4" class="aboutUsVideoClip" type="mp4" autoplay muted loop> Its Around </video>
+        <div class="aboutOpening">
+            <h1 class="ourStory">Our Story</h1>
+            <p class="ourStory">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae iste excepturi odio pariatur nihil nesciunt facere blanditiis. Deserunt, iusto harum quas accusantium minus et velit cupiditate, mollitia molestiae inventore consequuntur sint necessitatibus distinctio at adipisci, nesciunt consequatur! Tenetur, doloremque iusto asperiores deserunt tempora veniam, unde nemo porro possimus minima enim fugit delectus dolorum. Sed, sunt dolor aliquam minus iste similique deserunt consectetur dicta delectus, nesciunt animi ut repudiandae adipisci omnis a maiores? Vero, ipsa quam. Vero cupiditate ex nam ad.
+            </p>
+            <div class="aboutUsVideo">
+                <video src="videos/RPReplay_Final1670879511 (1).mp4" class="aboutUsVideoClip" type="mp4" autoplay muted loop> Its Around </video>
+            </div>
+            <div class="ourFounders">
+                <h1 class="ourStory">Our Founders</h1>
+            </div>
         </div>
-        <div class="ourFounders">
-            <h1>Our Founders</h1>
-        </div>
-
         <section class="ourFoundersDescrpition">
 
             <div class="leftSideFounder">
