--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/styles.css" rel="stylesheet">
         <link href="css/style.scss" rel="stylesheet">
     </head>
-    <body>
+    <body class="homePage">
         <div class="introContent">
             <main data-router-wrapper>
 
